# server.py
@@ -1,6 +1,13 @@
 from flask import render_template
 import connexion
 
+def basic_auth(username, password, required_scopes=None):
+    if username == 'admin' and password == 'secret':
+        return {'sub': 'admin'}
+
+    # optional: raise exception for custom error response
+    return None
+
 app = connexion.App(__name__, specification_dir = './')
 
 app.add_api('swagger.yml')
